--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,8 @@
       <version>5.4.0</version>
       <scope>test</scope>
     </dependency>
+
+      <!-- Pour Kotlin -->
       <dependency>
           <groupId>org.jetbrains.kotlin</groupId>
           <artifactId>kotlin-stdlib-jdk8</artifactId>
@@ -55,6 +57,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
       </plugin>
+
+        <!-- Pour faire tourner avec Kotlin, apparemment -->
         <plugin>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-maven-plugin</artifactId>
